[package]
name = "bevy_ui_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1", default-features = false, features = ["bevy_ui", "bevy_text", "bevy_asset", "bevy_render"] }
smallvec = "1.10.0"

[dev-dependencies]
bevy = "0.9.1"
bevy-inspector-egui = "0.17.0"
