[package]
name = "bevy_ui_builder"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "ui builder library for bevy_ui"
homepage = "https://github.com/gavxin/bevy_ui_builder"
repository = "https://github.com/gavxin/bevy_ui_builder"
readme = "README.md"
categories = ["gui", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1", default-features = false, features = ["bevy_ui", "bevy_text", "bevy_asset", "bevy_render"] }
smallvec = "1.10.0"

[dev-dependencies]
bevy = "0.9.1"
bevy-inspector-egui = "0.17.0"
